<resources>
    <string name="app_name">RHIT Club</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">menu_home</string>
    <string name="log_out">Log Out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="holder_is">Holder: %s</string>
    <string name="club">Club</string>
    <string name="event_list">Event List</string>
    <string name="club_list">Club List</string>
    <string name="event">Event</string>
    <string name="my_account">My Account</string>
    <string name="my_clubs">My Clubs</string>
    <string name="my_events">My Events</string>
    <string name="wantClub">Do you really want to join %s?</string>
    <string name="subsClub">Do you really want to subscribe %s?</string>
    <string name="wantEvent">Do you really want to sign up for %s?</string>
    <string name="dontwantClub">Do you really want to quit %s?</string>
    <string name="dontsubsClub">Do you really want to unsubscribe %s?</string>
    <string name="dontwantEvent">Do you really want to cancel %s?</string>
    <string name="my_subscribes">My Subscribes</string>
    <string name="edit">EDIT</string>
    <string name="add">ADD</string>
    <string name="name">Name</string>
    <string name="add_event">Add Event</string>
    <string name="event_name">Event Name</string>
    <string name="holder">Holder</string>
    <string name="edit_event">Edit Event</string>
    <string name="club_name">Club Name</string>
    <string name="description">Description</string>
    <string name="officer">Officer</string>
    <string name="edit_club">Edit Club</string>

    <string name="rosefire_key">276f0d8c-8b26-4888-8296-23c63a48da25</string>
    <string name="login_error">Login Error!</string>
    <string name="officer_email">Officer Email</string>
    <string name="room">Room</string>
</resources>
