<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/dialog_add_club_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/club_name"
        android:inputType="textCapWords" />

    <EditText
        android:id="@+id/dialog_add_club_des"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:inputType="textCapWords" />

    <EditText
        android:id="@+id/dialog_add_club_officer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/officer"
        android:inputType="textCapWords" />

    <EditText
        android:id="@+id/dialog_add_club_officer_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/officer_email"
        android:inputType="textCapWords" />

</LinearLayout>