<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="edu.rosehulman.krystal.rhitclub.MainActivity">

    <item
        android:id="@+id/menu_home"
        android:orderInCategory="90"
        android:icon="@drawable/ic_home_48dp"
        android:title="@string/menu_home"
        app:showAsAction="always" />

    <item
        android:id="@+id/log_out"

        android:orderInCategory="100"
        android:title="@string/log_out"
        android:icon="@drawable/ic_log_out_48dp"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />


</menu>
