<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.rosehulman.krystal.rhitclub.fragments.ClubDetailFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:paddingLeft="20dp"
            android:id="@+id/event_edit"
            android:paddingRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:textColor="@color/cyan"
            android:text="@string/edit"
            android:visibility="gone"
            style="@style/DetailText" />

        <TextView
            android:text="@string/event"
            style="@style/TitleText"
            android:layout_marginTop="20dp"
            android:id="@+id/event_name" />

        <TextView
            android:layout_below="@id/event_name"
            android:text="@string/club"
            style="@style/SubText"
            android:id="@+id/event_holder" />

        <TextView
            android:layout_below="@id/event_holder"
            android:text="@string/club"
            style="@style/DetailText"
            android:id="@+id/event_officer" />

        <ImageView
            android:layout_below="@id/event_officer"
            style="@style/ImageStyle"
            app:srcCompat="@drawable/sleeve"
            android:id="@+id/event_detail_image" />

    </RelativeLayout>
</FrameLayout>
